it and mvh period